--- a/testing-ace/myPage.html
+++ b/testing-ace/myPage.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ACE in Action</title>
+<style type="text/css" media="screen">
+#editor {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+p {
+	color: blue;
+}
+</style>
 </head>
 <body>
 
+	<h1>Hier große Überschrift</h1>
+	<br>
+	<p>hier ein wenig text
+	<div id="editor">System.out.println("HI");</div>
+
+	<script src="/home/marco-uni/git/ace-builds/src/ace.js"
+		type="text/javascript" charset="utf-8"></script>
+	<script>
+		var editor = ace.edit("editor");
+		editor.setTheme("ace/theme/Eclipse");
+		editor.session.setMode("ace/mode/java");
+	</script>
 </body>
 </html>
