--- a/testing-ace/myPage.html
+++ b/testing-ace/myPage.html
@@ -23,7 +23,7 @@ p {
 	<p>hier ein wenig text
 	<div id="editor">System.out.println("HI");</div>
 
-	<script src="/home/marco-uni/git/ace-builds/src/ace.js"
+	<script src="./ace/src/ace.js"
 		type="text/javascript" charset="utf-8"></script>
 	<script>
 		var editor = ace.edit("editor");
