added new style to editor

--- a/testing-ace/myPage.html
+++ b/testing-ace/myPage.html
@@ -7,7 +7,7 @@
 <body>
 
 	<section>
-		<h1>Hier große Überschrift</h1>
+		<h1>Javacode-Ausführer</h1>
 		<br>
 
 	</section>
@@ -17,12 +17,12 @@
 	</div>
 
 	<p>
-		hier ein wenig text
+		Bitte gib in den obigen Texteditor deinen gewünschten Java-Code ein.
 
 		<script src="./ace/src/ace.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			var editor = ace.edit("editor");
-			editor.setTheme("ace/theme/Eclipse");
+			editor.setTheme("ace/theme/katzenmilch");
 			editor.session.setMode("ace/mode/java");
 		</script>
 </body>
